Added section Modifying Molecules.

--- a/Docs/Book/C++Examples/CMakeLists.txt
+++ b/Docs/Book/C++Examples/CMakeLists.txt
@@ -22,23 +22,10 @@ set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR})
 
 set( LIBS ${RDKIT_LIBRARIES} ${Boost_LIBRARIES} z )
 
-add_executable( example1 example1.cpp )
-target_link_libraries( example1 ${LIBS} )
-
-add_executable( example2 example2.cpp )
-target_link_libraries( example2 ${LIBS} )
-
-add_executable( example3 example3.cpp )
-target_link_libraries( example3 ${LIBS} )
-
-add_executable( example4 example4.cpp )
-target_link_libraries( example4 ${LIBS} )
-
-add_executable( example5 example5.cpp )
-target_link_libraries( example5 ${LIBS} )
-
-add_executable( example6 example6.cpp )
-target_link_libraries( example6 ${LIBS} )
-
-add_executable( example7 example7.cpp )
-target_link_libraries( example7 ${LIBS} )
+foreach( exnum RANGE 1 9 )
+  message( "Example : ${exnum}" )
+  set( exe "example${exnum}" )
+  set( src "${exe}.cpp" )
+  add_executable( ${exe} ${src} )
+  target_link_libraries( ${exe} ${LIBS} )
+endforeach( exnum )
