More plodding progress.

--- a/Docs/Book/C++Examples/CMakeLists.txt
+++ b/Docs/Book/C++Examples/CMakeLists.txt
@@ -11,21 +11,27 @@ set(Boost_USE_MULTITHREADED OFF)
 set(Boost_USE_STATIC_RUNTIME ON)
 find_package( Boost COMPONENTS iostreams filesystem system thread)
 
-find_package( MyRDKit COMPONENTS FileParsers SmilesParse Depictor RDGeometryLib
-  RDGeneral SubstructMatch Subgraphs GraphMol DistGeometry DistGeomHelpers
-  MolAlign Optimizer RDGeometryLib ForceField ForceFieldHelpers Alignment
-  ForceField ForceFieldHelpers MolTransforms EigenSolvers)
+find_package( Cairo REQUIRED )
 
-include_directories( ${RDKIT_INCLUDE_DIR} )
+find_package( MyRDKit COMPONENTS FileParsers SmilesParse Depictor RDGeometryLib
+  RDGeneral SubstructMatch Subgraphs MolDraw2D FileParsers GraphMol DistGeometry DistGeomHelpers
+  MolAlign Optimizer RDGeometryLib ForceField ForceFieldHelpers Alignment
+  ForceField ForceFieldHelpers MolTransforms EigenSolvers )
+
+include_directories( ${RDKIT_INCLUDE_DIR} ${CAIRO_INCLUDE_DIRS} )
+message( "${CAIRO_INCLUDE_DIRS}" )
 
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR})
 
-set( LIBS ${RDKIT_LIBRARIES} ${Boost_LIBRARIES} z )
+set( LIBS ${RDKIT_LIBRARIES} ${Boost_LIBRARIES} ${CAIRO_LIBRARIES} z )
 
-foreach( exnum RANGE 1 9 )
+foreach( exnum RANGE 1 11 )
   message( "Example : ${exnum}" )
   set( exe "example${exnum}" )
   set( src "${exe}.cpp" )
   add_executable( ${exe} ${src} )
   target_link_libraries( ${exe} ${LIBS} )
 endforeach( exnum )
+
+add_executable( test_example test_example.cpp )
+target_link_libraries( test_example ${LIBS} )
