--- a/Code/PgSQL/rdkit/rdkit.sql.in
+++ b/Code/PgSQL/rdkit/rdkit.sql.in
@@ -1464,7 +1464,7 @@ AS
     FUNCTION    6   gbfp_picksplit (internal, internal),
     FUNCTION    7   gbfp_same (internal, internal, internal),
     FUNCTION    8   (bfp, bfp) gbfp_distance(internal, bytea, smallint, oid),
-    @RDKIT_PG_BFP_GIST_FETCH@
+
 STORAGE         bytea;
 
 CREATE OPERATOR CLASS gist_sfp_ops
@@ -1530,11 +1530,7 @@ RETURNS bool
 AS 'MODULE_PATHNAME'
 LANGUAGE C STABLE STRICT;
 
-CREATE FUNCTION gin_bfp_triconsistent(internal, int2, bfp, int4, internal, internal, internal)
-RETURNS bool
-AS 'MODULE_PATHNAME'
-LANGUAGE C STABLE STRICT;
-
+${RDK_GIN_BFP_TRICONSISTENT_DEFN}
 
 -- Operator classes for gin
 
@@ -1547,7 +1543,7 @@ AS
     FUNCTION    2   gin_bfp_extract_value(bfp, internal),
     FUNCTION    3   gin_bfp_extract_query(bfp, internal, int2, internal, internal, internal, internal),
     FUNCTION    4   gin_bfp_consistent(internal, int2, bfp, int4, internal, internal, internal, internal),
-    FUNCTION    6   gin_bfp_triconsistent(internal, int2, bfp, int4, internal, internal, internal),
+    ${RDK_GIN_BFP_TRICONSISTENT}
     STORAGE     int4;
 
 --
