--- a/.travis.yml
+++ b/.travis.yml
@@ -26,11 +26,15 @@ before_install:
 # additional .debs we need:
 addons:
  apt:
+  sources:
+  - ubuntu-toolchain-r-test
+  - llvm-toolchain-precise-3.8
   packages:
-    - build-essential
-    - openjdk-7-jdk
-    - swig
-    - libjpeg-dev
+  - build-essential
+  - openjdk-7-jdk
+  - swig
+  - libjpeg-dev
+  - clang-3.8
 
 install:
  - conda install -q numpy pillow pandas # matplotlib
@@ -60,8 +64,8 @@ script:
  - cd $RDBASE
  - mkdir build
  - cd build
- - export CXX=clang++
- - export CC=clang
+ - export CXX=clang++-3.8
+ - export CC=clang-3.8
  - cmake -D Python_ADDITIONAL_VERSIONS=$TRAVIS_PYTHON_VERSION -D PYTHON_EXECUTABLE=$PYTHON -D PYTHON_LIBRARY=`find $PY_PREFIX -name "libpython$TRAVIS_PYTHON_VERSION*.so"` -D PYTHON_NUMPY_INCLUDE_PATH=$PY_SP_DIR/numpy/core/include -D BOOST_ROOT=$PY_PREFIX -D Boost_NO_SYSTEM_PATHS=ON -D RDK_BUILD_SWIG_WRAPPERS=ON -D RDK_BUILD_AVALON_SUPPORT=ON -D RDK_BUILD_INCHI_SUPPORT=ON -DRDK_BUILD_THREADSAFE_SSS=on -DRDK_TEST_MULTITHREADED=on ..
  - cat CMakeCache.txt # useful for debugging/troubleshooting
 
