--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,6 @@ __pycache__/
 
 /rdkit/ML/Data/test_data/testgeneral.dat.pkl
 /rdkit/ML/Data/test_data/testquant.qdat.pkl
+
+# Tests caches
+.cache/
