Add test artifact to gitignore (#1326)
* Add test artifact to gitignore

* Removed the bin directory from gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -68,6 +68,7 @@ __pycache__/
 /Code/GraphMol/Wrap/test_data/outSmiles.txt
 
 /Code/GraphMol/test_data/bilastine_trajectory.sdf
+/Code/GraphMol/test_data/prop.pkl
 
 /Projects/DbCLI/testData/bzr/
 
