adding Dragon 2D autocorrelations descriptors
* fix the 3D autocorrelation descriptors based on the modification in
Dragon.
* Adding the 2D autocorrelation descriptors (no need of Eigen
dependency for this one)
* Adding 2D test case
* IState … no idea for the moment
* there is an error in 2D computation (memory error ???)

--- a/Code/GraphMol/Descriptors/CMakeLists.txt
+++ b/Code/GraphMol/Descriptors/CMakeLists.txt
@@ -1,7 +1,7 @@
 if(RDK_BUILD_DESCRIPTORS3D)
 
-  set(DESC3D_HDRS MolDescriptors3D.h PBF.h PMI.h Data3Ddescriptors.h MolData3Ddescriptors.h AUTOCORR3D.h RDF.h MORSE.h GETAWAY.h WHIM.h)
-  set(DESC3D_SOURCES PBF.cpp PMI.cpp Data3Ddescriptors.cpp MolData3Ddescriptors.cpp AUTOCORR3D.cpp RDF.cpp MORSE.cpp GETAWAY.cpp WHIM.cpp)
+  set(DESC3D_HDRS MolDescriptors3D.h PBF.h PMI.h Data3Ddescriptors.h MolData3Ddescriptors.h AUTOCORR3D.h AUTOCORR2D.h RDF.h MORSE.h GETAWAY.h WHIM.h)
+  set(DESC3D_SOURCES PBF.cpp PMI.cpp Data3Ddescriptors.cpp MolData3Ddescriptors.cpp AUTOCORR3D.cpp AUTOCORR2D.cpp RDF.cpp MORSE.cpp GETAWAY.cpp WHIM.cpp)
 
 endif(RDK_BUILD_DESCRIPTORS3D)
 
@@ -39,6 +39,8 @@ LINK_LIBRARIES  Descriptors FileParsers SmilesParse MolTransforms GraphMol DataS
   rdkit_test(testGETAWAY testGETAWAY.cpp
 LINK_LIBRARIES  Descriptors FileParsers SmilesParse MolTransforms GraphMol DataStructs EigenSolvers RDGeneral RDGeometryLib ${RDKit_THREAD_LIBS} )
   rdkit_test(testAUTOCORR3D testAUTOCORR3D.cpp
+LINK_LIBRARIES  Descriptors FileParsers SmilesParse MolTransforms GraphMol DataStructs EigenSolvers RDGeneral RDGeometryLib ${RDKit_THREAD_LIBS} )
+  rdkit_test(testAUTOCORR2D testAUTOCORR2D.cpp
 LINK_LIBRARIES  Descriptors FileParsers SmilesParse MolTransforms GraphMol DataStructs EigenSolvers RDGeneral RDGeometryLib ${RDKit_THREAD_LIBS} )
 
 endif(RDK_BUILD_DESCRIPTORS3D)
