--- a/Code/GraphMol/MolDraw2D/CMakeLists.txt
+++ b/Code/GraphMol/MolDraw2D/CMakeLists.txt
@@ -41,16 +41,22 @@ rdkit_library(MolDraw2D MolDraw2D.cpp MolDraw2DSVG.cpp
   ${CAIRODRAW2D_SRC} ${QTDRAW2D_SRC}
   MolDraw2DDetails.cpp MolDraw2DUtils.cpp
   LINK_LIBRARIES
-  FileParsers SmilesParse Depictor MolTransforms RDGeometryLib
+  ChemReactions FileParsers SmilesParse Depictor MolTransforms RDGeometryLib
   RDGeneral SubstructMatch Subgraphs GraphMol EigenSolvers
 RDGeometryLib
   ${RDKit_THREAD_LIBS} ${EXTRA_LOCAL_LIBS} )
 
 rdkit_test(moldraw2DTest1 test1.cpp LINK_LIBRARIES
-  FileParsers SmilesParse Depictor RDGeometryLib
+  ChemReactions FileParsers SmilesParse Depictor RDGeometryLib
   RDGeneral SubstructMatch Subgraphs GraphMol MolTransforms EigenSolvers
 RDGeometryLib
   MolDraw2D ${RDKit_THREAD_LIBS} ${EXTRA_LOCAL_LIBS} )
+
+rdkit_test(moldraw2DRxnTest1 rxn_test1.cpp LINK_LIBRARIES
+    ChemReactions FileParsers SmilesParse Depictor RDGeometryLib
+    RDGeneral SubstructMatch Subgraphs GraphMol MolTransforms EigenSolvers
+  RDGeometryLib
+    MolDraw2D ${RDKit_THREAD_LIBS} ${EXTRA_LOCAL_LIBS} )
 
 if(RDK_BUILD_QT_DEMO)
   add_subdirectory(QTDemo)
