Changes source to official FreeSASA windows patch

--- a/External/FreeSASA/CMakeLists.txt
+++ b/External/FreeSASA/CMakeLists.txt
@@ -11,11 +11,11 @@ endif()
 if(needDownload)
   # don't actually use the md5 here
   if(MSVC)
-    downloadAndCheckMD5("https://github.com/bp-kelley/freesasa/archive/msvc-fixes.tar.gz"
-          "${CMAKE_CURRENT_SOURCE_DIR}/msvc-fixes.tar.gz"
+    downloadAndCheckMD5("https://github.com/mittinatten/freesasa/archive/windows.tar.gz"
+          "${CMAKE_CURRENT_SOURCE_DIR}/windows.tar.gz"
           "")
     execute_process(COMMAND ${CMAKE_COMMAND} -E tar zxf
-      ${CMAKE_CURRENT_SOURCE_DIR}/msvc-fixes.tar.gz
+      ${CMAKE_CURRENT_SOURCE_DIR}/windows.tar.gz
       WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
     file(RENAME ${CMAKE_CURRENT_SOURCE_DIR}/freesasa-msvc-fixes ${CMAKE_CURRENT_SOURCE_DIR}/freesasa-master)
     set(FREESASA_SRC_DIR "freesasa-master")
