--- a/Code/GraphMol/CMakeLists.txt
+++ b/Code/GraphMol/CMakeLists.txt
@@ -11,7 +11,7 @@ rdkit_library(GraphMol
               LINK_LIBRARIES RDGeometryLib RDGeneral 
                  ${RDKit_THREAD_LIBS})
 
-target_link_libraries(GraphMol ${RDKit_THREAD_LIBS})
+target_link_libraries(GraphMol PUBLIC ${RDKit_THREAD_LIBS})
 
 rdkit_headers(Atom.h
               atomic_data.h
