remove quotes in target_compile_definitions, otherwise taken as a single definition

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -257,7 +257,7 @@ if(RDK_BUILD_THREADSAFE_SSS)
   find_package(Boost 1.39.0 COMPONENTS thread system)
   if(Boost_THREAD_FOUND AND Boost_SYSTEM_FOUND)
     set(Boost_LIBRARIES ${T_LIBS} ${Boost_LIBRARIES})
-    target_compile_definitions(rdkit_base INTERFACE "-DRDK_THREADSAFE_SSS -DBOOST_ALL_NO_LIB")
+    target_compile_definitions(rdkit_base INTERFACE -DRDK_THREADSAFE_SSS -DBOOST_ALL_NO_LIB)
     set(RDKit_THREAD_LIBS ${Boost_THREAD_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
     if(RDK_TEST_MULTITHREADED)
       target_compile_definitions(rdkit_base INTERFACE "-DRDK_TEST_MULTITHREADED")
