--- a/Code/GraphMol/MolDraw2D/CMakeLists.txt
+++ b/Code/GraphMol/MolDraw2D/CMakeLists.txt
@@ -12,45 +12,40 @@ rdkit_headers(MolDraw2D.h
   DEST GraphMol/MolDraw2D
 )
 
-if(RDK_BUILD_QT_SUPPORT)
-  #find_package(Qt5 COMPONENTS Widgets OpenGL REQUIRED)
-  find_package(Qt5Widgets REQUIRED)
-  find_package(Qt5OpenGL REQUIRED)
-
-  include_directories(
-    ${Qt5Widgets_INCLUDE_DIRS}
-    ${Qt5OpenGL_INCLUDE_DIRS}
-    )
-
-  set(QTDRAW2D_SRC MolDraw2DQt.cpp)
-  set(EXTRA_LOCAL_LIBS ${EXTRA_LOCAL_LIBS} ${Qt5Widgets_LIBRARIES}  ${Qt5OpenGL_LIBRARIES} )
-  rdkit_headers(MolDraw2DQt.h DEST GraphMol/MolDraw2D)
-  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-endif(RDK_BUILD_QT_SUPPORT)
-
-if(RDK_BUILD_CAIRO_SUPPORT)
-  find_package(Cairo REQUIRED)
-  include_directories( ${CAIRO_INCLUDE_DIRS} )
-  set(EXTRA_LOCAL_LIBS ${EXTRA_LOCAL_LIBS} ${CAIRO_LIBRARIES} )
-  ADD_DEFINITIONS("-DRDK_CAIRO_BUILD")
-  set(CAIRODRAW2D_SRC MolDraw2DCairo.cpp)
-  rdkit_headers(MolDraw2DCairo.h DEST GraphMol/MolDraw2D)
-endif(RDK_BUILD_CAIRO_SUPPORT)
-
 rdkit_library(MolDraw2D MolDraw2D.cpp MolDraw2DSVG.cpp
-  ${CAIRODRAW2D_SRC} ${QTDRAW2D_SRC}
   MolDraw2DDetails.cpp MolDraw2DUtils.cpp
   LINK_LIBRARIES
   FileParsers SmilesParse Depictor MolTransforms RDGeometryLib
   RDGeneral SubstructMatch Subgraphs GraphMol EigenSolvers
 RDGeometryLib
-  ${RDKit_THREAD_LIBS} ${EXTRA_LOCAL_LIBS} )
+  ${RDKit_THREAD_LIBS} )
+
+if(RDK_BUILD_QT_SUPPORT)
+  #find_package(Qt5 COMPONENTS Widgets OpenGL REQUIRED)
+  find_package(Qt5Widgets REQUIRED)
+  find_package(Qt5OpenGL REQUIRED)
+
+  target_sources(MolDraw2D PRIVATE MolDraw2DQt.cpp)
+  target_include_directories(MolDraw2D PUBLIC ${Qt5Widgets_INCLUDE_DIRS} ${Qt5OpenGL_INCLUDE_DIRS})
+  target_compile_options(MolDraw2D PRIVATE "-std=c++11")
+  target_link_libraries(MolDraw2D PUBLIC ${Qt5Widgets_LIBRARIES} ${Qt5OpenGL_LIBRARIES})
+  rdkit_headers(MolDraw2DQt.h DEST GraphMol/MolDraw2D)
+endif(RDK_BUILD_QT_SUPPORT)
+
+if(RDK_BUILD_CAIRO_SUPPORT)
+  find_package(Cairo REQUIRED)
+  target_include_directories(MolDraw2D PUBLIC ${CAIRO_INCLUDE_DIRS})
+  target_compile_definitions(MolDraw2D PUBLIC "-DRDK_CAIRO_BUILD")
+  target_link_libraries(MolDraw2D PUBLIC ${CAIRO_LIBRARIES})
+  target_sources(MolDraw2D PRIVATE MolDraw2DCairo.cpp)
+  rdkit_headers(MolDraw2DCairo.h DEST GraphMol/MolDraw2D)
+endif(RDK_BUILD_CAIRO_SUPPORT)
 
 rdkit_test(moldraw2DTest1 test1.cpp LINK_LIBRARIES
   FileParsers SmilesParse Depictor RDGeometryLib
   RDGeneral SubstructMatch Subgraphs GraphMol MolTransforms EigenSolvers
 RDGeometryLib
-  MolDraw2D ${RDKit_THREAD_LIBS} ${EXTRA_LOCAL_LIBS} )
+  MolDraw2D ${RDKit_THREAD_LIBS} )
 
 if(RDK_BUILD_QT_DEMO)
   add_subdirectory(QTDemo)
