only build when threadsafe_sss is enabled, only test when test_multithreaded is enabled

--- a/Code/GraphMol/SubstructLibrary/CMakeLists.txt
+++ b/Code/GraphMol/SubstructLibrary/CMakeLists.txt
@@ -1,3 +1,4 @@
+if(RDK_BUILD_THREADSAFE_SSS)
 rdkit_library(SubstructLibrary
               SubstructLibrary.cpp
               LINK_LIBRARIES Fingerprints SubstructMatch SmilesParse
@@ -12,3 +13,4 @@ rdkit_test(substructLibraryTest substructLibraryTest.cpp
            LINK_LIBRARIES SubstructLibrary Fingerprints
            SubstructMatch FileParsers SmilesParse GraphMol RDGeometryLib RDGeneral
            ${Boost_SERIALIZATION_LIBRARY})
+endif(RDK_BUILD_THREADSAFE_SSS)
