--- a/Code/GraphMol/SubstructLibrary/CMakeLists.txt
+++ b/Code/GraphMol/SubstructLibrary/CMakeLists.txt
@@ -2,7 +2,7 @@ if(RDK_BUILD_THREADSAFE_SSS)
 rdkit_library(SubstructLibrary
               SubstructLibrary.cpp
               LINK_LIBRARIES Fingerprints SubstructMatch SmilesParse
-              GraphMol RDGeometryLib Catalogs RDGeneral)
+              GraphMol RDGeometryLib Catalogs RDGeneral DataStructs )
 
 rdkit_headers(SubstructLibrary.h
               DEST GraphMol/SubstructLibrary)
@@ -11,6 +11,6 @@ add_subdirectory(Wrap)
 
 rdkit_test(substructLibraryTest substructLibraryTest.cpp
            LINK_LIBRARIES SubstructLibrary Fingerprints
-           SubstructMatch FileParsers SmilesParse GraphMol RDGeometryLib RDGeneral
+           SubstructMatch FileParsers SmilesParse GraphMol RDGeometryLib RDGeneral DataStructs
            ${Boost_SERIALIZATION_LIBRARY})
 endif(RDK_BUILD_THREADSAFE_SSS)
