--- a/Code/GraphMol/MolDraw2D/CMakeLists.txt
+++ b/Code/GraphMol/MolDraw2D/CMakeLists.txt
@@ -31,9 +31,8 @@ endif(RDK_BUILD_QT_SUPPORT)
 
 if(RDK_BUILD_CAIRO_SUPPORT)
   find_package(Cairo REQUIRED)
-  target_include_directories(MolDraw2D PUBLIC ${CAIRO_INCLUDE_DIRS})
   target_compile_definitions(MolDraw2D PUBLIC "-DRDK_CAIRO_BUILD")
-  target_link_libraries(MolDraw2D PUBLIC ${CAIRO_LIBRARIES})
+  target_link_libraries(MolDraw2D PUBLIC Cairo::Cairo)
   target_sources(MolDraw2D PRIVATE MolDraw2DCairo.cpp)
   rdkit_headers(MolDraw2DCairo.h DEST GraphMol/MolDraw2D)
 endif(RDK_BUILD_CAIRO_SUPPORT)
