--- a/Code/GraphMol/ChemReactions/Wrap/CMakeLists.txt
+++ b/Code/GraphMol/ChemReactions/Wrap/CMakeLists.txt
@@ -3,7 +3,7 @@ rdkit_python_extension(rdChemReactions
                        rdChemReactions.cpp
                        DEST Chem 
                        LINK_LIBRARIES 
-ChemReactions FilterCatalog ChemTransforms Descriptors Fingerprints Subgraphs DataStructs Depictor FileParsers SmilesParse SubstructMatch GraphMol Catalogs FilterCatalog RDGeneral RDGeometryLib RDBoost ${Boost_SERIALIZATION_LIBRARY})
+ChemReactions FilterCatalog ChemTransforms Descriptors Fingerprints Subgraphs DataStructs Depictor FileParsers SmilesParse SubstructMatch GraphMol Catalogs FilterCatalog RDGeneral RDGeometryLib RDBoost Boost::serialization)
 
 add_pytest(pyChemReactions
          ${CMAKE_CURRENT_SOURCE_DIR}/testReactionWrapper.py)
