--- a/Code/GraphMol/ChemReactions/CMakeLists.txt
+++ b/Code/GraphMol/ChemReactions/CMakeLists.txt
@@ -19,7 +19,7 @@ rdkit_library(ChemReactions
                     
               LINK_LIBRARIES
               FilterCatalog Descriptors Fingerprints DataStructs Depictor
-              FileParsers SubstructMatch ChemTransforms ${Boost_SERIALIZATION_LIBRARY})
+              FileParsers SubstructMatch ChemTransforms Boost::serialization)
 
 rdkit_headers(Reaction.h
               ReactionParser.h
@@ -40,14 +40,14 @@ rdkit_headers(Reaction.h
 
 rdkit_test(testReaction testReaction.cpp LINK_LIBRARIES
 ChemReactions ChemTransforms Descriptors Fingerprints Subgraphs DataStructs Depictor FileParsers SmilesParse SubstructMatch
-GraphMol RDGeneral RDGeometryLib ${Boost_SERIALIZATION_LIBRARY} )
+GraphMol RDGeneral RDGeometryLib )
 
 rdkit_test(testReactionFingerprints testReactionFingerprints.cpp LINK_LIBRARIES
 ChemReactions Descriptors Fingerprints Subgraphs DataStructs ChemTransforms Depictor FileParsers SmilesParse SubstructMatch
-GraphMol RDGeneral RDGeometryLib ${Boost_SERIALIZATION_LIBRARY}  )
+GraphMol RDGeneral RDGeometryLib )
 
 rdkit_test(testEnumeration Enumerate/testEnumerate.cpp LINK_LIBRARIES
 ChemReactions ChemTransforms Descriptors Fingerprints Subgraphs DataStructs Depictor FileParsers SmilesParse SubstructMatch
-GraphMol RDGeneral RDGeometryLib ${Boost_SERIALIZATION_LIBRARY} )
+GraphMol RDGeneral RDGeometryLib )
 
 add_subdirectory(Wrap)
