Using imported CMake targets for Eigen

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -247,7 +247,7 @@ if(RDK_BUILD_DESCRIPTORS3D)
   find_package(Eigen3)
   if(EIGEN3_FOUND)
     target_compile_definitions(rdkit_base INTERFACE "-DRDK_HAS_EIGEN3" "-DRDK_BUILD_DESCRIPTORS3D")
-    target_include_directories(rdkit_base INTERFACE ${EIGEN3_INCLUDE_DIR})
+    target_link_libraries(rdkit_base INTERFACE Eigen3::Eigen)
   else(EIGEN3_FOUND)
     message("Eigen3 not found, disabling the Descriptors3D build.")
     set(RDK_BUILD_DESCRIPTORS3D OFF)
