Use imported targets for Threads

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -262,7 +262,7 @@ if(RDK_BUILD_THREADSAFE_SSS)
     list(APPEND Boost_IMPORTED_LIBRARIES "Boost::thread")
     list(APPEND Boost_IMPORTED_LIBRARIES "Boost::system")
     target_compile_definitions(rdkit_base INTERFACE -DRDK_THREADSAFE_SSS -DBOOST_ALL_NO_LIB)
-    set(RDKit_THREAD_LIBS Boost::thread Boost::system ${CMAKE_THREAD_LIBS_INIT})
+    set(RDKit_THREAD_LIBS Boost::thread Boost::system Threads::Threads)
     if(RDK_TEST_MULTITHREADED)
       target_compile_definitions(rdkit_base INTERFACE "-DRDK_TEST_MULTITHREADED")
     endif()
@@ -270,10 +270,10 @@ if(RDK_BUILD_THREADSAFE_SSS)
     message("Boost thread or system not found. Disabling RDK_BUILD_THREADSAFE_SSS.")
     set(RDK_BUILD_THREADSAFE_SSS OFF)
     set(RDK_TEST_MULTITHREADED OFF)
-    set(RDKit_THREAD_LIBS ${CMAKE_THREAD_LIBS_INIT})
+    set(RDKit_THREAD_LIBS Threads::Threads)
   endif()
 else()
-  set(RDKit_THREAD_LIBS ${CMAKE_THREAD_LIBS_INIT})
+  set(RDKit_THREAD_LIBS Threads::Threads)
   if(RDK_TEST_MULTITHREADED)
     message("RDK_TEST_MULTITHREADED does not make sense without RD_BUILD_THREADSAFE_SSS, disabling it.")
     set(RDK_TEST_MULTITHREADED OFF)
