--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -256,13 +256,13 @@ endif(RDK_BUILD_DESCRIPTORS3D)
 
 
 find_package (Threads)
+set(RDKit_THREAD_LIBS Threads::Threads)
 if(RDK_BUILD_THREADSAFE_SSS)
   find_package(Boost 1.39.0 COMPONENTS thread system)
   if(Boost_THREAD_FOUND AND Boost_SYSTEM_FOUND)
-    list(APPEND Boost_IMPORTED_LIBRARIES "Boost::thread")
-    list(APPEND Boost_IMPORTED_LIBRARIES "Boost::system")
+    list(APPEND Boost_IMPORTED_LIBRARIES Boost::thread Boost::system)
     target_compile_definitions(rdkit_base INTERFACE -DRDK_THREADSAFE_SSS -DBOOST_ALL_NO_LIB)
-    set(RDKit_THREAD_LIBS Boost::thread Boost::system Threads::Threads)
+    list(APPEND RDKit_THREAD_LIBS Boost::thread Boost::system)
     if(RDK_TEST_MULTITHREADED)
       target_compile_definitions(rdkit_base INTERFACE "-DRDK_TEST_MULTITHREADED")
     endif()
@@ -270,10 +270,8 @@ if(RDK_BUILD_THREADSAFE_SSS)
     message("Boost thread or system not found. Disabling RDK_BUILD_THREADSAFE_SSS.")
     set(RDK_BUILD_THREADSAFE_SSS OFF)
     set(RDK_TEST_MULTITHREADED OFF)
-    set(RDKit_THREAD_LIBS Threads::Threads)
   endif()
 else()
-  set(RDKit_THREAD_LIBS Threads::Threads)
   if(RDK_TEST_MULTITHREADED)
     message("RDK_TEST_MULTITHREADED does not make sense without RD_BUILD_THREADSAFE_SSS, disabling it.")
     set(RDK_TEST_MULTITHREADED OFF)
