--- a/.travis.yml
+++ b/.travis.yml
@@ -30,13 +30,13 @@ addons:
   apt:
     sources:
     - ubuntu-toolchain-r-test
-    - llvm-toolchain-precise-3.8
+    - llvm-toolchain-trusty-3.9
     packages:
     - build-essential
     - openjdk-7-jdk
     - swig
     - libjpeg-dev
-    - clang-3.8
+    - clang-3.9
 
 install:
  - conda install -q numpy pillow pandas # matplotlib
